services/radarr/resources/radarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: truenas-ripping-storage
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.6.0
          volumeMounts:
            - name: ripping-storage
              mountPath: /output
            - name: config-volume
              mountPath: /config
            - name: truenas-media
              mountPath: /media
          ports:
            - name: web
              containerPort: 7878

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
