services/radarr/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://radarr.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: radarr
    gethomepage.dev/group: Admin
    gethomepage.dev/icon: radarr
    gethomepage.dev/name: Radarr
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-nginx/htpasswd
    nginx.ingress.kubernetes.io/auth-realm: durbin.casa
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
